[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipview"
version = "0.1.0"
description = "Simple IP lookup and analysis toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "kevin"}
]

dependencies = [
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/ribsremoved/ipview"
"Bug Tracker" = "https://github.com/yourusername/ipview/issues"